--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ frontend/node_modules
 frontend/build
 backend/venv
 backend/__pycache__
+backend/utils/__pycache__
+backend/utils/nlp_utils.cpython-312.pyc
