--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.4",
+    "react-type-animation": "^3.2.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
